--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.3.0",
+    "@mui/styled-engine-sc": "^5.3.0",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.13",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
+    "axios": "^0.25.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "jquery": "^3.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
-    "styled-components": "^4.4.0"
+    "react-toastify": "^8.1.0",
+    "sass": "^1.49.0",
+    "semantic-ui-react": "^2.0.4",
+    "spotify-web-api-node": "^5.0.2",
+    "styled-components": "^4.4.1",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
